<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/transaction_value" />

    <TextView
        android:id="@+id/cashValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/transactionPlusBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="plusBtnClick"
            android:padding="10dp"
            android:text="@string/transaction_earning"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/transactionMinusBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="minusBtnClick"
            android:padding="10dp"
            android:text="@string/transaction_expense"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ListView
        android:id="@+id/transactionAttributeList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="5dp"
        android:gravity="bottom|center" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addTextAttribute"
            android:text="@string/transaction_add_description" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="recordClicked"
            android:text="@string/transaction_record_name" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />
    </LinearLayout>

</LinearLayout>